fix: Fix unnamed module warning